# pjm-api

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  debug.ipynb  pjm_oasis_cli_quickstart.ipynb  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: advanced.md  authentication.md  backends.md  certificates.md  cli-reference.md  environments.md  index.html  python-usage.md  security.md  setup.md  templates.md  testing.md  troubleshooting.md
examples/: cli_fallback.py  env_file.py  pjmtransreq_upload.py  quickstart.py  template.py  template_query.py
src/pjm_api/: __init__.py  auth.py  certs.py  cli.py  cli_adapter.py  cli_zip.py  client.py  config.py  credentials.py  doctor.py  exceptions.py  guide.py  logging_utils.py  oasis.py  oasis_cli.py  production.py  response.py  security.py  templates.py  transport.py  unlock.py
src/pjm_api/data/: template_catalog.json
tests/: conftest.py  test_auth.py  test_certs.py  test_cli.py  test_cli_adapter.py  test_cli_extra.py  test_cli_init.py  test_cli_zip.py  test_client.py  test_config.py  test_config_credentials.py  test_credentials.py  test_doctor.py  test_examples.py  test_exceptions.py  test_guide.py  test_logging.py  test_notebook.py  test_oasis.py  test_oasis_cli.py  test_pages.py  test_production.py  test_readme.py  test_response.py  test_templates.py  test_transport.py
tests/contract/: test_auth_flow.py
tests/live/: test_transserv_smoke.py
