[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pjm-api"
version = "0.1.0"
description = "Python client for the PJM API with PKI certificate authentication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "willschenk" }]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pjm_api"]

[tool.hatch.build.targets.sdist]
include = ["src/pjm_api", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
