[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pjm-api"
version = "1.1.0"
description = "Python client for the PJM OASIS API with PKI certificate authentication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "willschenk" }]
keywords = ["pjm", "oasis", "energy", "api", "pki"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/willschenk/pjm-api"
Repository = "https://github.com/willschenk/pjm-api"
Documentation = "https://github.com/willschenk/pjm-api/blob/main/README.md"
Issues = "https://github.com/willschenk/pjm-api/issues"

[project.optional-dependencies]
pfx = ["cryptography>=42.0.0"]
pandas = ["pandas>=2.0.0"]
dotenv = ["python-dotenv>=1.0.0"]
cli-fallback = []
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "cryptography>=42.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
pjm-api = "pjm_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pjm_api"]

[tool.hatch.build.targets.sdist]
include = ["src/pjm_api", "tests", "docs", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: opt-in live PJM integration tests (requires credentials)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["pjm_api"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 55
